# speech-processing-itmo

./: .gitignore  main.py  pyproject.toml
assignment-1/: README.md  melbanks.py  simple_cnn.ipynb  speechcommands_report.md
assignment-2/: README.md  task.ipynb  wav2vec2decoder.py
